feat(auth): 자동 로그인 로직 및 로그인 화면 UI/네비게이션 완료

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
-        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".auth.AuthActivity" />
         <activity android:name=".main.admin.AdminMainActivity" />
         <activity android:name=".main.member.MemberMainActivity" />
         <activity android:name=".SplashActivity"
